--- a/microcon.html
+++ b/microcon.html
@@ -7,7 +7,7 @@
     <title>MicroCon</title>
 </head>
 <body>
-    <canvas width="640" height="480" id="canvas"></canvas>
+    <canvas style="width: 640px; image-rendering: pixelated;" width="160" height="120" id="canvas"></canvas>
     <script src="microcon.js"></script>
 </body>
 </html>
